# bmstu_labs

./: check_TSring.cpp
FirstModule/laba1/: TString.h
FirstModule/laba2/: PC.h  main.cpp
FirstModule/laba3/: TVector.cpp  main.cpp
FirstModule/laba5/: main.cpp
FirstModule/laba6/: TCarnivora.h  TGiraffa.cpp  THippopotamus.h  TLeo.cpp  TLoxodonta.h  TProboscidea.h  TZoo.cpp  TZoo.h  main.cpp
First_Course/FirstModule/laba6/: All.h  CMakeLists.txt  TAnimal.cpp  TAnimal.h  TArtiodactyla.cpp  TArtiodactyla.h  TCarnivora.cpp  TElephas.cpp  TElephas.h  TGiraffa.h  THippopotamus.cpp  TLeo.h  TLoxodonta.cpp  TProboscidea.cpp  TTigris.cpp  TTigris.h
First_Course/HW1/: CMakeLists.txt
First_Course/MyGame/: DarkLord.h  TEvil.h  main.cpp
HW1/: TList.h  main.cpp
HomeWork1/: TMap.h
MyGame/: CMakeLists.txt  TBoss.h  TEnemy.h  TGameObj.h  TMap.h  TPlayer.h
SecondModule/Filesream/: CMakeLists.txt  TFileStream.h
SecondModule/Laba1/: CastException.h  main.cpp
SecondModule/Laba10/: TArray.h
SecondModule/Laba2/: TBinaryTree.h  main.cpp
SecondModule/Laba3/: TInt.h  main.cpp
SecondModule/Laba4/: CMakeLists.txt  TVector.h  main.cpp
SecondModule/Laba5/: TNotCopyable.h  main.cpp
SecondModule/Laba6/: main.cpp
SecondModule/Laba7/: TVector.h
SecondModule/Laba8/: main.cpp
SecondModule/Laba9/: TSopedPtr.h
Second_Course/lab10/: CMakeLists.txt  README.md
ThirdModule/: TBoolean.h  main.cpp
laba1/: TString.cpp
laba2/: PC.cpp  PC.h  main.cpp
laba3/: TVector.cpp  TVector.h  main.cpp
laba4/: Ellipse.h  TCircle.h  main.cpp
laba5/: TPerson.h
(+43 files in other folders)
